[package]
name = "kopuz-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "utils"

[lints]
workspace = true

[dependencies]
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
db = { workspace = true }
color-thief = { workspace = true }
image = { workspace = true }
urlencoding = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lofty = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
time = { workspace = true, features = ["formatting", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
base64 = { workspace = true }
